--- a/questions/templates/questions/profile.html
+++ b/questions/templates/questions/profile.html
@@ -21,10 +21,26 @@ Login:
 </tr>
 <tr>
 <td> 
-Password: 
+Previous password: 
 </td>
 <td> 
-<input type="password" name="edit_password"/>
+<input type="password" name="prev_password"/>
+</td>
+</tr>
+<tr>
+<td> 
+New password: 
+</td>
+<td> 
+<input type="password" name="new_password"/>
+</td>
+</tr>
+<tr>
+<td> 
+Retype new password: 
+</td>
+<td> 
+<input type="password" name="re_new_password"/>
 </td>
 </tr>
 <tr>
